# PerezReverseKiller

./: .gitignore  README.md  build.gradle  gradle.properties  gradlew.bat  local.properties
app/: .gitignore  CMakeLists.txt  build.gradle  proguard.cfg
app/src/main/: AndroidManifest.xml
app/src/main/assets/: changelog-en.txt  changelog-es.txt  changelog-fr.txt  changelog-zh.txt
app/src/main/cpp/: ELFHash.cpp  android_os_FileHelper.cpp  com_perez_revkiller_Features.h  dumpdex_main.cpp  mainfunction.cpp  miniTelnet.c  oat2dex.cpp  odex2dex.cpp  parse_elf.cpp  rarext.cpp  tracepath.c  utils.cpp  utils.h  zipa.cpp
app/src/main/cpp/astyle/: astyle_main.cpp  astyle_main.h
app/src/main/cpp/qrcode/libiconv/: iconv.c
app/src/main/cpp/unrar/: archive.cpp  consio.cpp  extinfo.cpp  license.txt  rar.hpp  rarvm.cpp  readme.txt  unpack.cpp
app/src/main/cpp/unrar/inactive/: log.cpp  model.cpp
app/src/main/cpp/zipalign/: ZipAlign.cpp
app/src/main/java/android/os/: FileHelper.java
app/src/main/java/apksigner/: Main.java  Signature.java
app/src/main/java/apksigner/io/: CentralEnd.java  ZioEntry.java  ZioEntryOutputStream.java  ZipInput.java
app/src/main/java/com/perez/: RealFuncUtil.java
app/src/main/java/dalvik/bytecode/: Opcodes.java
app/src/main/jni/: Android.mk  ELFHash.cpp  android_os_FileHelper.cpp  com_perez_revkiller_Features.h  dumpdex_main.cpp  mainfunction.cpp  oat2dex.cpp  odex2dex.cpp  parse_elf.cpp  rarext.cpp  zipa.cpp  zlibmgr.cpp  zlibmgr.h
app/src/main/jni/astyle/: ASBeautifier.cpp  ASEnhancer.cpp  ASFormatter.cpp  ASLocalizer.cpp  ASLocalizer.h  ASResource.cpp  astyle.h  astyle_main.cpp  astyle_main.h
app/src/main/jni/dumpdex/: Debug.cpp  Debug.h  DexUtil.h  GlobalMarco.h  JNIHelp.h  Leb128.cpp  Leb128.h  ScopedFd.h  Types.h  dump_dex.cpp  dump_dex.h
app/src/main/jni/qrcode/: android_zbar.c  com_perez_qrcode_ZbarManager.h  config.h  convert.c  debug.h  svg.h  zbar.h
app/src/main/jni/unrar/: archive.cpp  arcread.cpp  array.hpp  cmddata.cpp  consio.cpp  crc.cpp  crypt.cpp  dll.cpp  dll.hpp  errhnd.cpp  extinfo.cpp  extract.cpp  filcreat.cpp  file.cpp  filefn.cpp  filestr.cpp  find.cpp  list.cpp  match.cpp  os.hpp  pathfn.cpp  rar.cpp  rar.hpp  rarvm.cpp  rdwrfn.cpp  recvol.cpp  rijndael.cpp  rijndael.hpp  rs.cpp  scantree.cpp  sha1.cpp  strfn.cpp  strlist.cpp  system.cpp  timefn.cpp  unicode.cpp  unpack.cpp  volume.cpp
app/src/main/res/layout/: activity_audio_player.xml  activity_change_filter.xml  activity_httpcapmain.xml  activity_huge.xml  activity_json.xml  activity_main.xml  activity_qr_code_scan.xml  activity_qrcode.xml  activity_scrolling.xml  activity_show_code.xml  alert_resp_filter.xml  app_bar_main.xml  code_editor.xml  content_scrolling.xml  editbox_layout.xml  fragment_network.xml  fragment_preview.xml  fragment_webview.xml  item_filter.xml  item_pages.xml  layout_loading2_dialog.xml  listact.xml  main.xml  nav_header_main.xml  sketcher.xml  text_editor.xml  title.xml
app/src/main/res/menu/: activity_main_drawer.xml  guardar.xml  httpcap_main.xml  json_menu.xml  package_menu.xml
app/src/main/res/values/: arrays.xml  attrs.xml  color.xml  dimens.xml  drawables.xml  progress_wheel_attrs.xml  strings.xml  styles.xml  zxing_ids.xml
app/src/main/res/values-es/: arrays.xml  strings.xml
app/src/main/res/values-fr/: arrays.xml  strings.xml
app/src/main/res/values-zh/: arrays.xml  strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: pref_data_sync.xml  pref_general.xml  pref_notification.xml  preferences.xml  searchable.xml
(+379 files in other folders)
